uipath-commons/main/default/objects/Account/fields/ABM_Tier__c.field-meta.xml
<CustomField>
        <fullName>ABM_Tier__c</fullName>
        <description>Used by Marketing team SLTECH-75</description>
        <inlineHelpText>Used by Marketing team</inlineHelpText>
        <label>ABM Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flagged</fullName>
                </value>
                <value>
                    <fullName>Focus</fullName>
                </value>
                <value>
                    <fullName>Top</fullName>
                </value>
                <value>
                    <fullName>GAM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>