uipath-commons/main/default/objects/Account/fields/Academic_Alliance_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Academic_Alliance_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Academic Alliance Agreement</label>
    
        <type>Checkbox</type>
</CustomField>