uipath-commons/main/default/objects/Account/fields/Academic_Alliance_Agreement_date__c.field-meta.xml
<CustomField>
    <fullName>Academic_Alliance_Agreement_date__c</fullName>
    <label>Academic Alliance Agreement date</label>
    <type>Date</type>
</CustomField>