uipath-commons/main/default/objects/Account/fields/Academic_Alliance_Liaison__c.field-meta.xml
<CustomField>
    <fullName>Academic_Alliance_Liaison__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Academic Alliance Liaison</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner, Partner Prospect</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Academic Alliance Liaison</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>