uipath-commons/main/default/objects/Account/fields/Academic_Alliance_Manager__c.field-meta.xml
<CustomField>
        <fullName>Academic_Alliance_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Academic Alliances Manager</description>
        <label>Academic Alliance Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.ProfileId</field>
                <operation>equals</operation>
                <value>00e1Q000001q6h9</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </CustomField>