uipath-commons/main/default/objects/Account/fields/Academic_Alliance_Partner__c.field-meta.xml
<CustomField>
        <fullName>Academic_Alliance_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically marks It as Academic Alliance Partner if the Legal document is signed</description>
        <label>Academic Alliance Partner</label>
        <type>Checkbox</type>
    </CustomField>