uipath-commons/main/default/objects/Account/fields/Academy__c.field-meta.xml
<CustomField>
        <fullName>Academy__c</fullName>
        <description>Used by Tech Alliances</description>
        <label>Academy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>