uipath-commons/main/default/objects/Account/fields/Account_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Business_Type__c</fullName>
    <label>Account Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>