uipath-commons/main/default/objects/Account/fields/Account_Documents__c.field-meta.xml
<CustomField>
    <fullName>Account_Documents__c</fullName>
    <description>Link to Account relevant documents on shared drive.</description>
    <inlineHelpText>Provide link to Account relevant documents on shared drive.</inlineHelpText>
    <label>Account Documents</label>
    <type>Url</type>
</CustomField>