uipath-commons/main/default/objects/Account/fields/Account_ID_Long__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_Long__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ID Long</label>
    <type>Text</type>
</CustomField>