uipath-commons/main/default/objects/Account/fields/Account_Next_Steps__c.field-meta.xml
<CustomField>
        <fullName>Account_Next_Steps__c</fullName>
        <label>Account Next Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>