uipath-commons/main/default/objects/Account/fields/Account_Owner_Email__c.field-meta.xml
<CustomField>
        <fullName>Account_Owner_Email__c</fullName>
        <formula>Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Email</label>
        <type>Text</type>
    </CustomField>