uipath-commons/main/default/objects/Account/fields/Account_Owner_Text__c.field-meta.xml
<CustomField>
        <fullName>Account_Owner_Text__c</fullName>
        <formula>Owner.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Text</label>
        <type>Text</type>
    </CustomField>