uipath-commons/main/default/objects/Account/fields/Account_Region__c.field-meta.xml
<CustomField>
    <fullName>Account_Region__c</fullName>
    <formula>if(CONTAINS(&#39;#AF#BD#BN#BT#CC#CK#CN#CX#FJ#GU#ID#IO#IQ#KH#KI#KP#KR#LA#MM#MN#MO#MV#MY#NC#NF#NP#NR#NU#NZ#PF#PG#PH#PN#PS#SB#SG#TH#TK#TL#TO#TV#TW#VN#VU#WF#WS#YE#&#39;, &#39;#&#39;+ TEXT(BillingCountryCode) + &#39;#&#39;), &quot;APAC&quot;,
if(CONTAINS(&#39;#JP#&#39;, &#39;#&#39;+ TEXT(BillingCountryCode) + &#39;#&#39;), &quot;Japan&quot;,  
if(CONTAINS(&#39;#IN#LK#&#39;, &#39;#&#39;+ TEXT(BillingCountryCode) + &#39;#&#39;), &quot;India&quot;,
if(CONTAINS(&#39;#AU#&#39;, &#39;#&#39;+ TEXT(BillingCountryCode) + &#39;#&#39;), &quot;Australia&quot;,
if(CONTAINS(&#39;#SY#KW#JO#IR#BH#AZ#AD#AL#AO#AT#AX#BA#BE#BF#BG#BI#BJ#BW#BY#CD#CF#CG#CH#CHEF#CI#CS#CM#CV#CW#CZ#DE#DJ#DK#DZ#EE#EG#EH#ER#ES#ET#FI#FO#FR#GA#GB#GG#GH#GI#GM#GN#GQ#GR#GW#HR#HU#IE#IM#IS#IT#JE#KE#KM#LI#LR#LS#LT#LU#LV#LY#MA#MC#MD#ME#MG#MK#ML#MR#MT#MU#MW#MZ#NA#NE#NG#NL#NO#PL#PT#RE#RO#RS#RU#RW#SC#SD#SE#SH#SI#SJ#SK#SL#SM#SN#SO#ST#SZ#LB#TD#TG#TN#TR#TZ#UA#UG#VA#YT#ZA#ZM#ZW#PK#SA#IL#AE#OM#QA#CY#GE#UZ#KG#KZ#AM#TJ#TM#CHEF#&#39;, &#39;#&#39;+ TEXT(BillingCountryCode) + &#39;#&#39;), &quot;EMEA&quot;, if(CONTAINS(&#39;#AG#AI#AW#BB#BL#BM#BS#BZ#CA#CR#CU#DM#DO#GD#GL#GP#GT#HN#HT#JM#KN#KY#LC#MF#MQ#MS#MX#NI#PA#PM#SV#SX#TC#TT#US#VC#VG#&#39;, &#39;#&#39;+ TEXT(BillingCountryCode) + &#39;#&#39;), &quot;NAMER&quot;, if(CONTAINS(&#39;#AQ#AR#BO#BQ#BR#BV#CL#CO#EC#FK#GF#GS#GY#HM#PE#PY#SR#SS#TF#UY#VE#&#39;, &#39;#&#39;+ TEXT(BillingCountryCode) + &#39;#&#39;), &quot;SAMER&quot;,&quot;Unknown&quot;)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Region (deprecated)</label>
    <type>Text</type>
</CustomField>