uipath-commons/main/default/objects/Account/fields/Account_Score__c.field-meta.xml
<CustomField>
        <fullName>Account_Score__c</fullName>
        <formula>(( Revenue_Score__c +  Employees_Score__c)/2 +  Industry_Score__c +  Customer_Stage_Score__c)/3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Priority</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>