uipath-commons/main/default/objects/Account/fields/Account_Scoring__c.field-meta.xml
<CustomField>
    <fullName>Account_Scoring__c</fullName>
    <description>Completed by Marketo</description>
    <label>Account Scoring</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>