uipath-commons/main/default/objects/Account/fields/Account_Target__c.field-meta.xml
<CustomField>
    <fullName>Account_Target__c</fullName>
    <label>Account Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>