uipath-commons/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
        <fullName>Account_Type__c</fullName>
        <label>Account Support Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>