uipath-commons/main/default/objects/Account/fields/Active_Account__c.field-meta.xml
<CustomField>
        <fullName>Active_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SLTECH-1742</description>
        <label>Inactive Account</label>
        <type>Checkbox</type>
    </CustomField>