uipath-commons/main/default/objects/Account/fields/Active_Customer__c.field-meta.xml
<CustomField>
        <fullName>Active_Customer__c</fullName>
        <formula>if(Has_Active_Opportunities__c = true,true,
   if( CSM__c &lt;&gt; null,true,false) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Customer</label>
        <type>Checkbox</type>
    </CustomField>