uipath-commons/main/default/objects/Account/fields/Active_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Active_Opportunities__c</fullName>
    <description>Used for Gainsight</description>
    <inlineHelpText>Used for Gainsight</inlineHelpText>
    <label>Active Opportunities (deprecated)</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>