uipath-commons/main/default/objects/Account/fields/Active_Opportunities_Nb__c.field-meta.xml
<CustomField>
        <fullName>Active_Opportunities_Nb__c</fullName>
        <description>Used for Gainsight</description>
        <inlineHelpText>Used for Gainsight</inlineHelpText>
        <label>Active Opportunities Nb (deprecated)</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>