uipath-commons/main/default/objects/Account/fields/AI_Early_Access_Program__c.field-meta.xml
<CustomField>
        <fullName>AI_Early_Access_Program__c</fullName>
        <label>AI Early Access Program</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AI Fabric</fullName>
                </value>
                <value>
                    <fullName>AI Document Understanding</fullName>
                </value>
                <value>
                    <fullName>AI Process Understanding</fullName>
                </value>
                <value>
                    <fullName>AI Visual Understanding</fullName>
                </value>
                <value>
                    <fullName>AI Conversational Understanding</fullName>
                </value>
                <value>
                    <fullName>AI Analytics</fullName>
                </value>
                <value>
                    <fullName>Human-in-the-Loop</fullName>
                </value>
                <value>
                    <fullName>Cloud Orchestrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>