uipath-commons/main/default/objects/Account/fields/All_Known_Phone_Numbers__c.field-meta.xml
<CustomField>
        <fullName>All_Known_Phone_Numbers__c</fullName>
        <description>Concatenated numbers synced from OpenPrise</description>
        <label>All Known Phone Numbers</label>
        <type>TextArea</type>
    </CustomField>