uipath-commons/main/default/objects/Account/fields/Allbound_ID__c.field-meta.xml
<CustomField>
        <fullName>Allbound_ID__c</fullName>
        <label>Allbound ID</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>