uipath-commons/main/default/objects/Account/fields/Allbound_Status__c.field-meta.xml
<CustomField>
    <fullName>Allbound_Status__c</fullName>
    <label>Allbound Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>