uipath-commons/main/default/objects/Account/fields/Annual_Contract_Value__c.field-meta.xml
<CustomField>
        <fullName>Annual_Contract_Value__c</fullName>
        <description>Sum of Open Renewals. Only for UiPath licenses</description>
        <formula>Sum_of_Open_Renewals__c</formula>
        <inlineHelpText>Sum of Open Renewals. Only for UiPath licenses</inlineHelpText>
        <label>Current Year Renewals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>