uipath-commons/main/default/objects/Account/fields/Annual_Revenue_Local_Currency__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_Local_Currency__c</fullName>
    <formula>AnnualRevenue *  CURRENCYRATE(TEXT(CurrencyIsoCode))</formula>
    <label>Annual Revenue Local Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>