uipath-commons/main/default/objects/Account/fields/Approach__c.field-meta.xml
<CustomField>
    <fullName>Approach__c</fullName>
    <label>Approach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>