uipath-commons/main/default/objects/Account/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MEA</fullName>
            </value>
            <value>
                <fullName>Central Europe</fullName>
            </value>
            <value>
                <fullName>EECIS</fullName>
            </value>
            <value>
                <fullName>Southern Europe</fullName>
            </value>
            <value>
                <fullName>Northern Europe</fullName>
            </value>
            <value>
                <fullName>Western Europe</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>Gov / Fed</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>