uipath-commons/main/default/objects/Account/fields/Assigned_Data_Steward__c.field-meta.xml
<CustomField>
        <fullName>Assigned_Data_Steward__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Data Steward that verified the account</description>
        <inlineHelpText>The Data Steward that verified the account</inlineHelpText>
        <label>Assigned Data Steward</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts6</relationshipName>
        <type>Lookup</type>
    </CustomField>