uipath-commons/main/default/objects/Account/fields/Average_Deal_Size__c.field-meta.xml
<CustomField>
    <fullName>Average_Deal_Size__c</fullName>
    <label>Average Deal Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>