uipath-commons/main/default/objects/Account/fields/Billing_Address_Concatenated__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Concatenated__c</fullName>
    <formula>IF(LEN(BillingStreet) &gt; 0, BillingStreet, &quot;&quot;) &amp; 
IF(LEN(BillingCity) &gt; 0, &quot;, &quot; &amp; BillingCity, &quot;&quot;) &amp;
IF(LEN(BillingState) &gt; 0, &quot;, &quot; &amp; BillingState, &quot;&quot;) &amp;
IF(LEN(BillingPostalCode) &gt; 0, &quot;, &quot; &amp; BillingPostalCode, &quot;&quot;) &amp; 
IF(LEN(BillingCountry) &gt; 0, &quot;, &quot; &amp; BillingCountry, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Address Concatenated</label>
    <type>Text</type>
</CustomField>