uipath-commons/main/default/objects/Account/fields/Billing_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country_Code__c</fullName>
    <formula>text(BillingCountryCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Country Code</label>
    <type>Text</type>
</CustomField>