uipath-commons/main/default/objects/Account/fields/Billing_State_Text_D_B__c.field-meta.xml
<CustomField>
    <fullName>Billing_State_Text_D_B__c</fullName>
    <description>Used to store value from D&amp;B State</description>
    <label>Billing State Text (D&amp;B)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>