uipath-commons/main/default/objects/Account/fields/Billing_System__c.field-meta.xml
<CustomField>
    <fullName>Billing_System__c</fullName>
    <description>Specifies (legacy) billing system used for this account</description>
    <inlineHelpText>Specifies (legacy) billing system used for this account</inlineHelpText>
    <label>Billing System</label>
    <length>20</length>
    <type>Text</type>
</CustomField>