uipath-commons/main/default/objects/Account/fields/Billings_Transferred__c.field-meta.xml
<CustomField>
    <fullName>Billings_Transferred__c</fullName>
    <label>Billings Transferred</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>