uipath-commons/main/default/objects/Account/fields/Bombora_Avg_Composite_Score__c.field-meta.xml
<CustomField>
    <fullName>Bombora_Avg_Composite_Score__c</fullName>
    <description>Average Composite Score of the active Bombora records</description>
    <formula>IF((Bombora_Composite_Score_Sum__c &lt; 1 ||  Bombora_Topic_Count__c &lt;1),NULL,(Bombora_Composite_Score_Sum__c/Bombora_Topic_Count__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bombora Avg Composite Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>