uipath-commons/main/default/objects/Account/fields/Bombora_Composite_Score_Sum__c.field-meta.xml
<CustomField>
        <fullName>Bombora_Composite_Score_Sum__c</fullName>
        <description>Sum the Composite Score field on Bombora records that
have the attribute of ‘Inactive’ = FALSE</description>
        <label>Bombora Composite Score Sum</label>
        <summarizedField>bombora_app__BomboraCustomObject__c.bombora_app__CompositeScore__c</summarizedField>
        <summaryFilterItems>
            <field>bombora_app__BomboraCustomObject__c.bombora_app__inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>bombora_app__BomboraCustomObject__c.bombora_app__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </CustomField>