uipath-commons/main/default/objects/Account/fields/Bombora_Topic_Count__c.field-meta.xml
<CustomField>
    <fullName>Bombora_Topic_Count__c</fullName>
    <description>Bombora records that have the
attribute of ‘Inactive’ = FALSE</description>
    <label>Bombora Topic Count</label>
    <summaryFilterItems>
        <field>bombora_app__BomboraCustomObject__c.bombora_app__inactive__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>bombora_app__BomboraCustomObject__c.bombora_app__Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>