uipath-commons/main/default/objects/Account/fields/BPO_Discount_Tier__c.field-meta.xml
<CustomField>
    <fullName>BPO_Discount_Tier__c</fullName>
    <label>BPO Discount Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>35%</fullName>
            </value>
            <value>
                <fullName>25%</fullName>
            </value>
            <value>
                <fullName>15%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>