uipath-commons/main/default/objects/Account/fields/BPO_termination_date__c.field-meta.xml
<CustomField>
    <fullName>BPO_termination_date__c</fullName>
    <label>BPO termination date</label>
    <type>Date</type>
</CustomField>