uipath-commons/main/default/objects/Account/fields/Business_Partner_2__c.field-meta.xml
<CustomField>
        <fullName>Business_Partner_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Partner 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>01236000000OGv1,01236000001UOmp</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Business Partner 2)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </CustomField>