uipath-commons/main/default/objects/Account/fields/Business_Partner__c.field-meta.xml
<CustomField>
    <fullName>Business_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Mapped from lead convert</description>
    <inlineHelpText>Mapped from lead convert</inlineHelpText>
    <label>Business Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Partner Accounts (Lead)</relationshipLabel>
    <relationshipName>Business_Partner_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>