uipath-commons/main/default/objects/Account/fields/Business_Partner_Contract__c.field-meta.xml
<CustomField>
    <fullName>Business_Partner_Contract__c</fullName>
    <label>Business Partner Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resale</fullName>
            </value>
            <value>
                <fullName>BPO</fullName>
            </value>
            <value>
                <fullName>Resale + BPO</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Fed MPA (Delivery Only)</fullName>
            </value>
            <value>
                <fullName>Sales Agent</fullName>
            </value>
            <value>
                <fullName>Software License Broker</fullName>
            </value>
            <value>
                <fullName>Non-Standard</fullName>
            </value>
            <value>
                <fullName>MPA via Distributor Resale</fullName>
            </value>
            <value>
                <fullName>MPA via Distributor BPO</fullName>
            </value>
            <value>
                <fullName>MPA via Distributor Resale + BPO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>