uipath-commons/main/default/objects/Account/fields/Business_Partner_Level__c.field-meta.xml
<CustomField>
    <fullName>Business_Partner_Level__c</fullName>
    <label>Business Partner Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Disty - Japan Only</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Silver (Tier 2) - Japan Only</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Diamond</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>