uipath-commons/main/default/objects/Account/fields/Business_Partner_Status__c.field-meta.xml
<CustomField>
    <fullName>Business_Partner_Status__c</fullName>
    <label>Business Partner Status</label>
    
        <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good Standing</fullName>
            </value>
            <value>
                <fullName>Not in Program</fullName>
            </value>
            <value>
                <fullName>Pending Contract</fullName>
            </value>
            <value>
                <fullName>Pending Termination</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Not Yet Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>