uipath-commons/main/default/objects/Account/fields/Business_Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Partner_Type__c</fullName>
    <label>Business Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GSI</fullName>
            </value>
            <value>
                <fullName>VAR</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Software License Broker</fullName>
            </value>
            <value>
                <fullName>Sales Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>