uipath-commons/main/default/objects/Account/fields/Bypass_validation__c.field-meta.xml
<CustomField>
        <fullName>Bypass_validation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Bypass validation</label>
        <type>Checkbox</type>
    </CustomField>