uipath-commons/main/default/objects/Account/fields/Category_of_automated_processes__c.field-meta.xml
<CustomField>
    <fullName>Category_of_automated_processes__c</fullName>
    <label>Category of automated processes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order to cash</fullName>
            </value>
            <value>
                <fullName>Customer onboarding</fullName>
            </value>
            <value>
                <fullName>Data migration and entry</fullName>
            </value>
            <value>
                <fullName>Scanning documents</fullName>
            </value>
            <value>
                <fullName>Data reporting</fullName>
            </value>
            <value>
                <fullName>Mass Emailing</fullName>
            </value>
            <value>
                <fullName>Customer service - call center</fullName>
            </value>
            <value>
                <fullName>L1 Tech support</fullName>
            </value>
            <value>
                <fullName>Core Business Operations</fullName>
            </value>
            <value>
                <fullName>Self Service Operations</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Training and Development</fullName>
            </value>
            <value>
                <fullName>Financial Operations</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Appeals processing</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>