uipath-commons/main/default/objects/Account/fields/Channel_Tier__c.field-meta.xml
<CustomField>
    <fullName>Channel_Tier__c</fullName>
    <description>Channel Tier for Accounts, this is required in NetSuite Customer and will be set based on below logic - 
End User - if Account record type is Customer
Reseller -  if Account record type is Partner</description>
    <inlineHelpText>End User - if Account record type is Customer
Reseller -  if Account record type is Partner</inlineHelpText>
    <label>Channel Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>End User</fullName>
                <default>true</default>
                <label>End User</label>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>