uipath-commons/main/default/objects/Account/fields/Classification2__c.field-meta.xml
<CustomField>
    <fullName>Classification2__c</fullName>
    <formula>text(Classification__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification2</label>
    <type>Text</type>
</CustomField>