uipath-commons/main/default/objects/Account/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    
        <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Diamond</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>Velocity</fullName>
            </value>
            <value>
                <fullName>General Business</fullName>
            </value>
            <value>
                <fullName>Inside Sales</fullName>
            </value>
            <value>
                <fullName>Global - Strategic</fullName>
                <isActive>false</isActive>
                <label>Global - Strategic</label>
            </value>
            <value>
                <fullName>Growth</fullName>
                <isActive>false</isActive>
                <label>Growth</label>
            </value>
            <value>
                <fullName>Key</fullName>
                <isActive>false</isActive>
                <label>Key</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>