uipath-commons/main/default/objects/Account/fields/Closed_Opps_3rd_Parent__c.field-meta.xml
<CustomField>
    <fullName>Closed_Opps_3rd_Parent__c</fullName>
    <label>Closed Opps 3rd Parent</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>