uipath-commons/main/default/objects/Account/fields/Closed_Opps_5th_Parent__c.field-meta.xml
<CustomField>
        <fullName>Closed_Opps_5th_Parent__c</fullName>
        <label>Closed Opps 5th Parent</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>